syntax = "proto3";
package tsdbPb;

message Key {
	bytes    key       = 1;
	int32    shardId   = 2;
}

message TimeValuePair {
	int64  timestamp = 1;
	double value     = 2;
}

message DataPoint {
	Key           key   = 1;
	TimeValuePair value = 2; 
}

message DataPoints {
	Key                    key = 1;
	repeated TimeValuePair values = 2; 
}

message PutRequest {
	repeated DataPoint datas = 1;	
}

message PutResponse {
	int32 n = 1;	
}

message GetRequest {
	repeated Key keys = 1;
	int64 begin = 2;
	int64 end = 3;
}

message GetResponse {
	repeated DataPoints datas = 1;	
}

service Tsdb {
	rpc Put(PutRequest) returns (PutResponse) {}

	rpc Get(GetRequest) returns (GetResponse) {}
}
